--- a/.example.env
+++ b/.example.env
@@ -27,3 +27,7 @@ TWILIO_AUTH_TOKEN=
 TWILIO_ACCOUNT_SID=
 TWILIO_WHATSAPP_NUMBER=""
 CLOUDINARY_URL=
+
+# admin configuration
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
