fix: :construction: <FR1> change host to get from env

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,4 @@
+# db config
 DB_HOST=""
 DB_USER=""
 DB_PASS=""
@@ -10,7 +11,6 @@ PORT="8080"
 LOG_MODE=1 # 1: silent, 2: error, 3: warn, 4: info
 
 # middleware
-
 BASIC_AUTH_USERNAME=""
 BASIC_AUTH_PASSWORD=""
 
@@ -31,3 +31,6 @@ CLOUDINARY_URL=
 # admin configuration
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
+
+# host config
+HOST=localhost:8080
