fix: :construction: <FR1> encode in mail activation, update host front-end to env, change request and response in register, change jwt claims from username to name

--- a/.example.env
+++ b/.example.env
@@ -29,8 +29,11 @@ TWILIO_WHATSAPP_NUMBER=""
 CLOUDINARY_URL=
 
 # admin configuration
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
+ADMIN_EMAIL=""
+ADMIN_PASSWORD=""
 
-# host config
-HOST=localhost:8080
+# host front-end config
+HOST_FRONTEND="http://localhost:4200"
+
+# jwt secret
+JWT_SECRET=""
