--- a/.example.env
+++ b/.example.env
@@ -28,3 +28,7 @@ HOST_FRONTEND="http://localhost:4200"
 
 # jwt secret
 JWT_SECRET=""
+
+# basic auth configuration
+BASIC_AUTH_USERNAME=""
+BASIC_AUTH_PASSWORD=""
