fix 🐛 edited example.env file

--- a/.example.env
+++ b/.example.env
@@ -1,34 +1,41 @@
 # db config
-DB_HOST=""
-DB_USER=""
-DB_PASS=""
-DB_PORT=""
-DB_NAME=""
-MAX_IDLE="1"
-MAX_CONN="2"
-MAX_LIFE_TIME="1h"
-PORT="8080"
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_PORT=
+DB_NAME=
+MAX_IDLE=1
+MAX_CONN=2
+MAX_LIFE_TIME=1h
+PORT=8080
 LOG_MODE=1 # 1: silent, 2: error, 3: warn, 4: info
 
+# middleware
+BASIC_AUTH_USERNAME=
+BASIC_AUTH_PASSWORD=
+
 # send-email
-EMAIL_HOST="smtp.gmail.com"
+EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_ADDRESS=""
-EMAIL_PASSWORD=""
+EMAIL_ADDRESS=
+EMAIL_PASSWORD=
 
 #api-key
 CLOUDINARY_URL=
 
 # admin configuration
-ADMIN_EMAIL=""
-ADMIN_PASSWORD=""
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+
+# host config
+HOST=http://localhost:8080
 
 # host front-end config
-HOST_FRONTEND="http://localhost:4200"
+HOST_FRONTEND=http://localhost:4200
 
 # jwt secret
-JWT_SECRET=""
+JWT_SECRET=
 
 # basic auth configuration
-BASIC_AUTH_USERNAME=""
-BASIC_AUTH_PASSWORD=""
+BASIC_AUTH_USERNAME=
+BASIC_AUTH_PASSWORD=
